--- a/core/src/CMakeLists.txt
+++ b/core/src/CMakeLists.txt
@@ -37,7 +37,8 @@ add_library(${PROJECT_NAME}
 	solvers/pipeline_planner.cpp
 	solvers/multi_planner.cpp
 )
-target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
+find_package(pybind11 REQUIRED)
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES} pybind11::module)
 target_include_directories(${PROJECT_NAME}
 	PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
 	PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
